# hs-cipher-aes

./: README.md  cipher-aes.cabal
Benchmarks/: Benchmarks.hs  CAPI.hs
Crypto/Cipher/: AES.hs
Tests/: KATCBC.hs  KATECB.hs  KATGCM.hs  KATOCB3.hs  KATXTS.hs  Tests.hs
cbits/: aes.c  aes.h  aes_generic.c  aes_generic.h  aes_x86ni.c  aes_x86ni.h  aes_x86ni_impl.c  bitfn.h  block128.h  cpu.c  cpu.h  gf.c  gf.h
