Name:                cipher-aes
Version:             0.1.4
Description:
    Fast AES cipher implementation with advanced mode of operations.
    .
    The modes of operations available are ECB (Electronic code book),
    CBC (Cipher block chaining), CTR (Counter), XTS (XEX with ciphertext stealing),
    GCM (Galois Counter Mode).
    .
    The AES implementation uses AES-NI when available (on x86 and x86-64 architecture),
    but fallback gracefully to a software C implementation.
    .
    The software implementation uses S-Boxes, which might suffer for cache timing issues.
    However do notes that most other known software implementations, including very popular
    one (openssl, gnutls) also uses same implementation. If it matters for your
    case, you should make sure you have AES-NI available, or you'll need to use a different
    implementation.
    .
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Fast AES cipher implementation with advanced mode of operations
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-cipher-aes
Cabal-Version:       >=1.8
Extra-Source-Files:  Tests/*.hs
                     cbits/*.h

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
  Exposed-modules:   Crypto.Cipher.AES
  ghc-options:       -Wall
  C-sources:         cbits/aes_generic.c
                     cbits/aes.c
                     cbits/gf.c
                     cbits/cpu.c
  if os(linux) && (arch(i386) || arch(x86_64))
    CC-options:      -mssse3 -maes -mpclmul -DWITH_AESNI
    C-sources:       cbits/aes_x86ni.c

Test-Suite test-cipher-aes
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 4 && < 5
                   , cipher-aes
                   , bytestring
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3 && < 0.7
                   , test-framework-quickcheck2 >= 0.2.9 && < 0.3

Benchmark bench-cipher-aes
  hs-source-dirs:    Benchmarks
  Main-Is:           Benchmarks.hs
  type:              exitcode-stdio-1.0
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , cipher-aes
                   , criterion
                   , mtl

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-cipher-aes
